# Otus_cpp

./: .gitignore  CMakeLists.txt  Readme.md  annotated.html  annotated_dup.js  classes.html  dir_15145d0cfa67b376f8d3f842a97e7fb1.html  dir_15145d0cfa67b376f8d3f842a97e7fb1.js  dir_196a1d8d1902fcaaf737e6685e0f8aa0.html  dir_196a1d8d1902fcaaf737e6685e0f8aa0.js  dir_27d7077b501cf370300eb9df8c4c0b84.html  dir_27d7077b501cf370300eb9df8c4c0b84.js  dir_2879053b84896c12ffc7981c1bfbc532.html  dir_2879053b84896c12ffc7981c1bfbc532.js  dir_2d7582150cb1f089c5c8a5deebdfcc0d.html  dir_2d7582150cb1f089c5c8a5deebdfcc0d.js  dir_2f730f5434597c08ceb8912275aa9760.html  dir_6172dfce0cec09f16503358f08ee2212.html  dir_6172dfce0cec09f16503358f08ee2212.js  dir_79ae9c56883535016d82dfa22592a52d.html  dir_79ae9c56883535016d82dfa22592a52d.js  dir_7b86808525f21adae85b84901a4f8edc.html  dir_7b86808525f21adae85b84901a4f8edc.js  dir_958861d79cb1113d211530376a9b221e.html  dir_958861d79cb1113d211530376a9b221e.js  dir_9c3a6970d54cccef69c4c601a19386ac.html  dir_d10c3e8a2dde3831a0cdf2fb5b9ce982.html  dir_d10c3e8a2dde3831a0cdf2fb5b9ce982.js  dir_e6e0ab503e958a50ce35fb2372f2482e.html  dir_e6e0ab503e958a50ce35fb2372f2482e.js  dir_eabfa435b6f6c58a855f6d8481e5f7a4.html  dir_eabfa435b6f6c58a855f6d8481e5f7a4.js  dir_ec8cfc4c1b62390607f43999ff93fb81.html  dir_ec8cfc4c1b62390607f43999ff93fb81.js  dir_ff028c2de6bb35ff9cb892421277f296.html  dir_ff028c2de6bb35ff9cb892421277f296.js  files.html  files_dup.js  functions.html  functions_a.html  (+166 more)
.github/workflows/: docgenerate.yml  release.yml
01-helloworld/: CMakeLists.txt  helloworld.cpp  helloworld_test.cpp
02-ip_filter/: CMakeLists.txt  ip_filter.cpp
03-allocator/: CMakeLists.txt  allocator.cpp  allocator_test.cpp
04-print_ip/: CMakeLists.txt  Doxyfile  print_ip.cpp  print_ip.h  print_ip_test.cpp
d0/d02/: classtesting_1_1internal_1_1UniversalTersePrinter_3_01T_01_6_01_4.html  classtesting_1_1internal_1_1UniversalTersePrinter_3_01T_01_6_01_4.js
d0/d06/: classtesting_1_1internal_1_1ReturnRefOfCopyAction-members.html
d0/d0f/: classtesting_1_1internal_1_1DoDefaultAction.html  classtesting_1_1internal_1_1DoDefaultAction.js  structtesting_1_1internal_1_1WithArgsAction.html  structtesting_1_1internal_1_1WithArgsAction.js
d0/d18/: structtesting_1_1OnceAction_3_01Result_07Args_8_8_8_08_4_1_1IgnoreIncomingArguments-members.html
d0/d1a/: gtest-death-test-internal_8h.html  gtest-death-test-internal_8h.js  gtest-death-test-internal_8h_source.html
d0/d1e/: gmock-nice-strict_8h.html  gmock-nice-strict_8h.js  gmock-nice-strict_8h_source.html
d0/d20/: classtesting_1_1internal_1_1GTestMutexLock-members.html
d0/d25/: classtesting_1_1internal_1_1IgnoreResultAction-members.html  structtesting_1_1internal_1_1NameGeneratorSelector.html  structtesting_1_1internal_1_1NameGeneratorSelector.js  structtesting_1_1internal_1_1is__implicitly__convertible-members.html
d0/d31/: gtest-param-test_8h.html  gtest-param-test_8h.js  gtest-param-test_8h_source.html
d0/d40/: structis__tuple__of__same__types.html  structis__tuple__of__same__types.js
d0/d43/: classtesting_1_1ActionInterface.html  classtesting_1_1ActionInterface.js
d0/d45/: gtest-string_8h.html  gtest-string_8h.js  gtest-string_8h_source.html
d0/d48/: structtesting_1_1internal_1_1SetArrayArgumentAction-members.html
d0/d50/: classtesting_1_1internal_1_1RangeGenerator.html  classtesting_1_1internal_1_1RangeGenerator.js
d0/d51/: classtesting_1_1TestEventListener.html  classtesting_1_1TestEventListener.js
d0/d57/: structtesting_1_1internal_1_1DeleteArgAction.html  structtesting_1_1internal_1_1DeleteArgAction.js
d0/d6a/: structtesting_1_1internal_1_1RelationToSourceReference.html
d0/d6d/: gtest-printers_8h.html  gtest-printers_8h.js  gtest-printers_8h_source.html
d0/d72/: structtesting_1_1internal_1_1SetArgRefereeAction.html  structtesting_1_1internal_1_1SetArgRefereeAction.js
d0/d74/: structtesting_1_1internal_1_1SuiteApiResolver.html  structtesting_1_1internal_1_1SuiteApiResolver.js
d0/d75/: namespacetesting.html  namespacetesting.js
d0/d81/: gmock-function-mocker_8h.html  gmock-function-mocker_8h.js  gmock-function-mocker_8h_source.html  namespacetesting_1_1internal_1_1posix.html
d0/d88/: classtesting_1_1internal_1_1TestFactoryImpl.html  classtesting_1_1internal_1_1TestFactoryImpl.js  structtesting_1_1gmock__matchers__test_1_1GtestGreaterThanMatcher-members.html
d0/d89/: classtesting_1_1internal_1_1UniversalTersePrinter_3_01wchar__t_01_5_01_4-members.html
d0/d94/: classtesting_1_1internal_1_1ReturnRefOfCopyAction_1_1Impl.html  classtesting_1_1internal_1_1ReturnRefOfCopyAction_1_1Impl.js
html/: index.html
latex/: refman.tex
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+109 more)
(+800 files in other folders)
